crates/engine/tests/snapshots/fix_pipeline__audit_record_snapshot_e001_dry_run.snap
---
source: crates/engine/tests/fix_pipeline.rs
expression: json
---
[
  {
    "classifier_id": null,
    "confidence": 1.0,
    "dry_run": true,
    "input": null,
    "migration_ref": null,
    "original": "NF",
    "replacement": "NOFORN",
    "rule": "E001",
    "schema": "marque-mvp-1",
    "source": "BuiltinRule",
    "span": {
      "end": 10,
      "start": 8
    },
    "timestamp": "2023-11-14T22:13:20Z"
  }
]
