crates/engine/tests/snapshots/fix_pipeline__audit_record_snapshot_e002_apply@marque-mvp-3.snap
---
source: crates/engine/tests/fix_pipeline.rs
expression: json
---
[
  {
    "classifier_id": null,
    "confidence": 0.9700000286102295,
    "dry_run": false,
    "input": null,
    "migration_ref": null,
    "proposal": {
      "intent": {
        "kind": "FactAdd",
        "scope": "Page",
        "token": {
          "kind": "Cve",
          "token_id": 104
        }
      },
      "kind": "FixIntent"
    },
    "recognition": 1.0,
    "rule": "E002",
    "schema": "marque-mvp-3",
    "source": "BuiltinRule",
    "span": {
      "end": 18,
      "start": 0
    },
    "timestamp": "2023-11-14T22:13:20Z"
  }
]
